--- a/unifi-stack/docker-compose.yml
+++ b/unifi-stack/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - ${MONGO_CONFIG}:/data/db
     healthcheck:
-      test: ["CMD", "mongo", "--eval", "db.adminCommand('ping')"]
+      test: ["CMD", "mongo", "admin", "--eval", "db.adminCommand('ping')"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -33,16 +33,26 @@ services:
       - MONGO_AUTHSOURCE=${MONGO_AUTHSOURCE}
       - MEM_LIMIT=${UNIFI_MEM_LIMIT}
       - MEM_STARTUP=${UNIFI_MEM_STARTUP}
+    ports:
+      - 8443:8443
+      - 3478:3478/udp
+      - 10001:10001/udp
+      - 8080:8080
+      - 1900:1900/udp #optional
+      - 8843:8843 #optional
+      - 8880:8880 #optional
+      - 6789:6789 #optional
+      - 5514:5514/udp #optional
     volumes:
       - ${UNIFI_CONFIG}:/config
     healthcheck:
-      test: ["CMD", "curl", "-f", "https://localhost:8443"]
+      test: ["CMD", "curl", "-f", "-k", "https://localhost:8443"]
       interval: 30s
       timeout: 10s
       retries: 3
     networks:
-      - unifi-net
-      - management-net
+      unifi-net:
+      management-net:
 networks:
   unifi-net:
     external: true
